# linked-list

./: .gitignore  CMakeLists.txt  README.md
src/: double_ptr.c  len_cnt_search_replace.c  ll_01.c  ll_02.c  pointer_practice_1.c  pointers_1_1.c  practice_001.c  practice_delete.c  practice_ll.c  recall.c  section_2_3.c  section_2_4.c  section_delete_node_2_5.c  section_insert_at_tail_2_4.c  section_prac_2_3.c  section_search_count_replace_2_6.c
